--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 
+    <link href="css/ihover.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -88,7 +90,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-3 caja">
                     <i class="fa fa-diamond"></i>
-                    <a href="#">
+                    <a href="http://es.wix.com/website/templates">
                         <h4>Desarrollo de plantillas</h4>
                     </a>
                     <p>Desarrollo plantillas a medida con HTML5 / CSS3 / JS</p>
@@ -102,14 +104,14 @@
                 </div>
                 <div class="col-sm-12 col-md-3 caja">
                     <i class="fa fa-newspaper-o"></i>
-                    <a href="#">
+                    <a href="http://laboratoria.la/">
                         <h4>Full websites</h4>
                     </a>
                     <p>Desarrollo websites completos y dinámicos</p>
                 </div>
                 <div class="col-sm-12 col-md-3 caja">
                     <i class="fa fa-heart"></i>
-                    <a href="#">
+                    <a href="https://play.google.com/store/apps?hl=es_419">
                         <h4>Aplicaciones Android</h4>
                     </a>
                     <p>Desarrollo aplicaciones Android listas para subir a la tienda</p>
@@ -122,25 +124,85 @@
         <div class="container-fluid">
             <div class="fotos row">
                 <div class="col-md-4">
-                    <img src="img/portfolio/1.jpg">
+                    <div class="ih-item square effect6 from_top_and_bottom">
+                        <a href="#">
+                            <div class="img">
+                                <img src="img/portfolio/1.jpg" alt="img">
+                            </div>
+                            <div class="info">
+                              <h3>Categoria</h3>
+                              <p>Nombre del Proyecto</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/portfolio/2.jpg">
+                    <div class="ih-item square effect6 from_top_and_bottom">
+                        <a href="#">
+                            <div class="img">
+                                <img src="img/portfolio/2.jpg" alt="img">
+                            </div>
+                            <div class="info">
+                              <h3>Categoria</h3>
+                              <p>Nombre del Proyecto</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <img src="img/portfolio/3.jpg">
+                <div class="col-md-4 coral">
+                    <div class="ih-item square effect6 from_top_and_bottom">
+                        <a href="#">
+                            <div class="img">
+                                <img src="img/portfolio/3.jpg" alt="img">
+                            </div>
+                            <div class="info">
+                              <h3>Categoria</h3>
+                              <p>Nombre del Proyecto</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
 
             <div class="fotos row">
                 <div class="col-md-4">
-                    <img src="img/portfolio/4.jpg">
+                    <div class="ih-item square effect6 from_top_and_bottom">
+                        <a href="#">
+                            <div class="img">
+                                <img src="img/portfolio/4.jpg" alt="img">
+                            </div>
+                            <div class="info">
+                              <h3>Categoria</h3>
+                              <p>Nombre del Proyecto</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/portfolio/5.jpg">
+                    <div class="ih-item square effect6 from_top_and_bottom">
+                        <a href="#">
+                            <div class="img">
+                                <img src="img/portfolio/5.jpg" alt="img">
+                            </div>
+                            <div class="info">
+                              <h3>Categoria</h3>
+                              <p>Nombre del Proyecto</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/portfolio/6.jpg">
+                    <div class="ih-item square effect6 from_top_and_bottom">
+                        <a href="#">
+                            <div class="img">
+                                <img src="img/portfolio/6.jpg" alt="img">
+                            </div>
+                            <div class="info">
+                              <h3>Categoria</h3>
+                              <p>Nombre del Proyecto</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -185,6 +247,7 @@
     <script src="js/creative.js"></script>
 
     <!-- Desplazamiento -->
+    <script src="js/app.js"></script>
     <script src="js/main.js"></script>
 </body>
 
