--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+    <!-- Inicio-->
     <!-- Inicion -->
     <header>
         <nav role="navigation" class="navbar navbar-default">
@@ -247,7 +248,6 @@
     <script src="js/creative.js"></script>
 
     <!-- Desplazamiento -->
-    <script src="js/app.js"></script>
     <script src="js/main.js"></script>
 </body>
 
